--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-3==0.0.0
+environs~=9.0
 aiofiles==23.1.0
 aiogram==3.0.0b7
 python-dotenv==1.0.0
 flask>=2.3.2
 waitress>=2.1.2
-
+betterlogging
+quart
+aiogram-dialog>=2.0.0b17
